--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 					cellspacing="0"
 					role="presentation"
 					style="
-						background: rgb(255, 255, 255);
+						background: linear-gradient(purple,black,purple);
 						background-color: rgb(255, 255, 255);
 					"
 				>
@@ -270,7 +270,7 @@
 														color: #000;
 													"
 												>
-													<h3><b>Greetings from CodeCell✨</b></h3>
+													<h3><b style="color: white;">Greetings from CodeCell✨</b></h3>
 												</div>
 												<div
 													style="
@@ -279,7 +279,7 @@
 														font-size: 14px;
 														line-height: 1.6;
 														text-align: left;
-														color: rgb(0, 0, 0);
+														color: white;
 													"
 												>
 													<p>
@@ -361,6 +361,7 @@
                                           font-size: 20px;
 										  text-align: center;
 										  margin-top: -40px;
+										  color: white;
                                         "
                                       >
                                       <p style="margin: 8px 0">Harshal Dulera</p>
@@ -459,6 +460,7 @@
                                           font-size: 20px;
 										  text-align: center;
 										  margin-top: -50px;
+										  color: white;
                                         "
                                       >
                                         <p style="margin: 8px 0">Shubham Shah</p>
@@ -558,6 +560,7 @@
                                           font-size: 20px;
 										  text-align: center;
 										  margin-top: -50px;
+										  color: white;
                                         "
                                       >
                                         <p style="margin: 8px 0">Diya Parelkar</p>
@@ -571,9 +574,9 @@
 														
 													</table>
 
-													<p>
+													<p style="color: white;">
 														Cheers to all the beautiful memories made along the way and many more to come🎉</p>
-													<div>
+													<div style = "color: white;">
 														Godspeed,<br />
 														<b>KJSCE CodeCell</b>
 													</div>
