--- a/index.html
+++ b/index.html
@@ -271,7 +271,8 @@
 														color: #000;
 													"
 												>
-													<h3><b style="color: white;">Greetings from CodeCell✨</b></h3>
+													<h3><b style="color: white;">Greetings from CodeCell</b></h3>
+													  <img src = "Spark.png" style = "display: inline-block">
 												</div>
 												<div
 													style="
