--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 													"
 												>
 													<h3><b style="color: white;">Greetings from CodeCell</b></h3>
-													  <img src = "Spark.png" style = "display: inline-block">
+													  <img src = "Spark-cr.png" style ="display: inline-block"; height="14px"; width="14px";>
 												</div>
 												<div
 													style="
@@ -320,7 +320,12 @@
                                           font-size: 30px;
                                         "
                                       >
-                                      ☕
+                                      <img src="Kafee-cr.png"
+									  style="
+									  display: inline-block;
+									  height: 30px;
+									  width: 30px;
+									  ">
                                       </div>
                                     </td>
                                     <td
