Fix bottom para

--- a/index.html
+++ b/index.html
@@ -588,9 +588,9 @@
 														
 													</table>
 
-													<p style="color: white;font-family: Arial, Helvetica, sans-serif;">
+													<p style="color: white;font-family: Arial, Helvetica, sans-serif; margin:13px; font-size: 14px;">
 														Cheers to all the beautiful memories made along the way and many more to come<img src="Party-cr.png" style ="display: inline"; height="18px"; width="18px";></p>
-													<div style = "color: white;">
+													<div style = "color: white; margin: 13px; font-size: 14px;">
 														Welcome aboard!,<br />
 														<b>KJSCE CodeCell</b>
 													</div>
