--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
 		style="
 			background-image: url('https://storage.googleapis.com/subtlepatterns-production/designers/subtlepatterns/uploads/double-bubble-dark.png');
 			background-repeat: repeat;
+			font-family: Arial, Helvetica, sans-serif;
 		"
 	>
 		<div>
@@ -590,7 +591,7 @@
 
 													<p style="color: white;font-family: Arial, Helvetica, sans-serif; margin:13px; font-size: 14px;">
 														Cheers to all the beautiful memories made along the way and many more to come<img src="Party-cr.png" style ="display: inline"; height="18px"; width="18px";></p>
-													<div style = "color: white; margin: 13px; font-size: 14px;">
+													<div style = "color: white; margin: 13px; font-size: 14px; font-family: Arial, Helvetica, sans-serif;">
 														Welcome aboard!,<br />
 														<b>KJSCE CodeCell</b>
 													</div>
