--- a/index.html
+++ b/index.html
@@ -319,13 +319,14 @@
                                         style="
                                           text-align: center;
                                           font-size: 30px;
+										  margin-bottom: -20px;
                                         "
                                       >
                                       <img src="Kafee-cr.png"
 									  style="
 									  display: inline-block;
-									  height: 30px;
-									  width: 30px;
+									  height: 45px;
+									  width: 45px;
 									  ">
                                       </div>
                                     </td>
@@ -403,13 +404,14 @@
                                         style="
                                           text-align: center;
                                           font-size: 30px;
+										  margin-bottom: -25px;
                                         "
                                       >
                                         <img src="pen-cr.png"
 										style="
 									  display: inline-block;
-									  height: 30px;
-									  width: 30px;
+									  height: 45px;
+									  width: 45px;
 									  ">
                                       </div>
                                     </td>
@@ -505,13 +507,14 @@
                                         style="
                                           text-align: center;
                                           font-size: 30px;
+										  margin-bottom: -20px;
                                         "
                                       >
                                       <img src="Mobile-cr.png"
 										style="
 									  display: inline-block;
-									  height: 30px;
-									  width: 30px;
+									  height: 45px;
+									  width: 45px;
 									  ">
                                       </div>
                                     </td>
@@ -592,7 +595,7 @@
 													<p style="color: white;font-family: Arial, Helvetica, sans-serif; margin:13px; font-size: 14px;">
 														Cheers to all the beautiful memories made along the way and many more to come<img src="Party-cr.png" style ="display: inline"; height="18px"; width="18px";></p>
 													<div style = "color: white; margin: 13px; font-size: 14px; font-family: Arial, Helvetica, sans-serif;">
-														Welcome aboard!,<br />
+														Welcome aboard!<br />
 														<b>KJSCE CodeCell</b>
 													</div>
 												</div>
